# hand_eraser

./: CMakeLists.txt  README.md  auto_run.sh
lib/: library.cpp  library.h
pass/: CMakeLists.txt  eraser_pass.cpp
